[tool.poetry]
name = "payment-service"
version = "0.1.0"
description = ""
authors = ["jserazo <juanserazo@hotmail.es>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.139.0"
uvicorn = "^0.49.0"
sqlalchemy = "^2.0.51"
alembic = "^1.18.5"
tenacity = "^9.1.4"
httpx = "^0.28.1"
pydantic-settings = "^2.14.2"
aiosqlite = "^0.22.1"


[tool.poetry.group.dev.dependencies]
pytest = "^9.1.1"
pytest-asyncio = "^1.4.0"
pytest-cov = "^7.1.0"
ruff = "^0.15.20"

[tool.pytest.ini_options]
pythonpath = "."

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
